# Malcolm-Test

./: README.md  malcolm-vm-init.py  pyproject.toml  requirements.txt  setup.cfg
src/malcolm_test/: __init__.py  malcolm_test.py
src/malcolm_test/virter/debian-12/init/: 00-apt-init.toml  00-system.toml  01-apt-init.toml  01-podman.toml  02-docker.toml  02-podman.toml  03-docker.toml  03-podman.toml
src/malcolm_test/virter/malcolm-init/: 01-clone-install.toml  03-pull.toml
src/maltest/: maltest.py  utils.py
src/maltest/tests/: conftest.py  test_api_indices.py  test_arkime_api.py  test_common_protocols.py  test_connectivity.py  test_cyberville.py  test_detection_packages.py  test_evtx.py  test_icsnpp_protocols.py  test_malcolm_db_health.py  test_malcolm_local_account_management.py  test_malcolm_pcap.py  test_malcolm_response.py  test_malcolm_upstreams.py  test_mapi.py  test_netbox.py  test_nginx_access.py  test_ot_protocols.py  test_severity.py  test_upstreams.py
src/maltest/virter/malcolm-init/: 01-clone-install.toml  02-auth_setup.toml
virter/: malcolm-setup-01-clone-install.toml  malcolm-setup-01-external-tools.toml  malcolm-setup-03-reboot.toml  malcolm-virter.sh
virter/debian-12/: malcolm-setup-01-clone-install.toml  malcolm-setup-02-auth_setup.toml
virter/debian-12/fini/: 99-reboot.toml
virter/debian-12/init/: 00-apt-init.toml
virter/malcolm/: 01-clone-install.toml  02-auth_setup.toml
virter/malcolm-fini/: 01-wipe.toml
virter/malcolm-init/: 01-clone-install.toml  02-auth_setup.toml  03-pull.toml  99-reboot.toml
(+1 files in other folders)
