[metadata]
name = malcolm-test
version = 0.0.1
author = Seth Grover
author_email = mero.mero.guero@gmail.com
description = malcolm-test
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mmguero-dev/malcolm-test
project_urls =
    Bug Tracker = https://github.com/mmguero-dev/malcolm-test/issues
classifiers =
    License :: OSI Approved :: Apache Software License 2.0 (Apache-2.0)
    Operating System :: Linux
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
zip_safe = False
python_requires = >=3.11
install_requires =
    mmguero
    petname==2.6
    pytest==8.3.3
    toml==0.10.2

[options.package_data]
* = virter/**/*, tests/**/*

[options.entry_points]
console_scripts =
    malcolm-test = malcolm_test:main

[options.packages.find]
where = src